🐌 Fix inline-break in table-block

--- a/src/styles/notion-block.module.css
+++ b/src/styles/notion-block.module.css
@@ -139,7 +139,7 @@
 
 .table th,
 .table td {
-  white-space: nowrap;
+  white-space: pre;
 }
 
 .columnList {
